--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,172 +1,174 @@
 <% title("Home") %>
-<section class="header-10-sub">
+<section class="header-10-sub ">
     <div class="container">
         <div class="hero-unit">
-            <%= image_tag 'bitcoin.svg', style: "width:300px;" %>
-            <h1 style="text-transform: uppercase;">From grave to wallet</h1>
-            <p>
-                Tombstone generates two keys that can be joined
+            <%= image_tag 'bitcoin.svg', class:'home-logo' %>
+            <div class="col-lg-6 col-lg-offset-3">
+              <h1 style="text-transform: uppercase;">From your grave to their wallet</h1>
+              <p>
+                Tombstone creates two keys that can be joined
                 <br/>
-                in order to access a bit wallet.
-            </p>
+                in order to access your bit wallet.
+              </p>
+            </div>
         </div>
     </div>
-	<a class="control-btn fa fa-angle-down fa-4x" href="#content-12"> </a>
+	<!--<a class="control-btn fa fa-angle-down fa-4x" href="#content-12"> </a>-->
 </section>
-<section class="content-12">
-	<%= link_to "Don't wait until it's to late // Get Started Now!", new_user_registration_path, class: "wide btn-wide" %>
-</section>
-<section class="crew-4">
-	<div class="container">
-	  <h3>The Crew<br/>
-	    We built this thing in 24/hrs</h3>
-	  <div class="members">
-	    <div class="member-wrapper">
-	      <div class="member">
-	        <div class="photo-wrapper">
-	          <div class="photo">
-	            <img src="" alt="">
-	          </div>
-	          <div class="overlay">
-	            <a href="https://blockchain.info/address/1GN4ENR3qgXmwB82NprT6zuBfUShev3Aca" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
-	            <a href="https://github.com/gitney"><span class="fa fa-github fa-3x"></span></a>
-	            <a href="https://twitter.com/NeyHernandez3"><span class="fa fa-twitter fa-3x"></span></a>
-	          </div>
-	        </div>
-	        <div class="info">
-	          <div class="name">Ney Hernandez</div>
-	          <b>Front Developer</b> Front end designer and html5, CSS3, JS coder.
-	          <div class="contacts">
-	            <a href="https://github.com/gitney" target="_blank">https://github.com/gitney</a>
-	            <br>
-	            <a href="https://twitter.com/NeyHernandez3" target="_blank">@NeyHernandez3</a>
-	          </div>
-	        </div>
-	      </div>
-	    </div>
-	    <div class="member-wrapper">
-	      <div class="member">
-	        <div class="photo-wrapper">
-	          <div class="photo">
-	            <img src="../../common-files/img/crew/sergey-s.png" alt="">
-	          </div>
-	          <div class="overlay">
-	            <a href="https://blockchain.info/address/1PYQWY9KTu6xXBsYcpbrhWeKvtnQH3kWw5" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
-	            <a href="https://github.com/isaacito" target="_blank"><span class="fa fa-github fa-3x"></span></a>
-	            <a href="https://twitter.com/i_wein" target="_blank"><span class="fa fa-twitter fa-3x"></span></a>
-	          </div>
-	        </div>
-	        <div class="info">
-	          <div class="name">Isaac Weinbach</div>
-	          <b>The Heartbeat</b> doesn't care that guac is extra.
-	          <div class="contacts">
-	            <a href="http://www.isaacweinbach.co/" target="_blank">http://isaacweinbach.co/</a>
-	            <br>
-	            <a href="https://twitter.com/i_wein" target="_blank">@i_Wein</a>
-	          </div>
-	        </div>
-	      </div>
-	    </div>
-	    <div class="member-wrapper">
-	      <div class="member">
-	        <div class="photo-wrapper">
-	          <div class="photo">
-	            <img src="../../common-files/img/crew/adrian-v.png" alt="">
-	          </div>
-	          <div class="overlay">
-	            <a href="https://blockchain.info/address/1HksghkAu5HrAW8wJGFtonvtz3YRe7ruoU" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
-	            <a href="https://github.com/CyberStrike" target="_blank"><span class="fa fa-github fa-3x"></span></a>
-	            <a href="https://twitter.com/cyberstrike" target="_blank"><span class="fa fa-twitter fa-3x"></span></a>
-	          </div>
-	        </div>
-	        <div class="info">
-	          <div class="name">Chris Scott</div>
-	          <b>Product Designer</b>When it comes to pizza, eats the crust first.
-	          <div class="contacts">
-	            <a href="https://github.com/CyberStrike" target="_blank">https://github.com/CyberStrike</a>
-	            <br>
-	            <a href="https://twitter.com/cyberstrike" target="_blank">@cyberstrike</a>
-	          </div>
-	        </div>
-	      </div>
-	    </div>
-	  </div>
-	  	  <div class="members">
-	    <div class="member-wrapper">
-	      <div class="member">
-	        <div class="photo-wrapper">
-	          <div class="photo" >
-	            <img src="" alt="" >
-	          </div>
-	          <div class="overlay" >
-	            <a href="https://blockchain.info/address/1DAQUFD2Jypu7vEqiydBLiBhev8UZi7G69" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
-	            <a href="https://github.com/Ameji012" target="_blank"><span class="fa fa-github fa-3x"></span></a>
-	            <a href="https://twitter.com/anuvis_m" target="_blank"><span class="fa fa-twitter fa-3x"></span></a>
-	          </div>
-	        </div>
-	        <div class="info">
-	          <div class="name">Anuvis Mejia</div>
-	          <b>Full Stack Dev</b> cuts his own hair.<br>&nbsp;
-	          <div class="contacts">
-	            <a href="http://www.anuvism.com/" target="_blank">http://anuvism.com/</a>
-	            <br>
-	            <a href="https://twitter.com/anuvis_m" target="_blank">@anuvis_m</a>
-	          </div>
-	        </div>
-	      </div>
-	    </div>
-	    <div class="member-wrapper">
-	      <div class="member">
-	        <div class="photo-wrapper">
-	          <div class="photo">
-	            <img src="../../common-files/img/crew/sergey-s.png" alt="">
-	          </div>
-	          <div class="overlay">
-	            <a href="https://blockchain.info/address/18sf1jgrdXF9BzJtxtiwzyqjkkAsr5SSz1" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
-	            <a href="https://github.com/marknatera" target="_blank"><span class="fa fa-github fa-3x"></span></a>
-	            <a href="https://twitter.com/marknatera" target="_blank"><span class="fa fa-twitter fa-3x"></span></a>
-	          </div>
-	        </div>
-	        <div class="info">
-	          <div class="name">Mark Natera</div>
-	          <b>Agile Full Stack Dev</b> never late.<br>&nbsp;
-	          <div class="contacts">
-	            <a href="http://markn.co/" target="_blank">http://markn.co/</a>
-	            <br>
-	            <a href="https://twitter.com/marknatera" target="_blank">@marknatera</a>
-	          </div>
-	        </div>
-	      </div>
-	    </div>
-	    <div class="member-wrapper">
-	      <div class="member">
-	        <div class="photo-wrapper">
-	          <div class="photo">
-	            <img src="../../common-files/img/crew/adrian-v.png" alt="">
-	          </div>
-	          <div class="overlay">
-	            <a href="https://blockchain.info/address/1QAwuJdtDEGDyNBZhhWxbssLweaxQRRUqV" target="_blank"><span class="fa fa-btc fa-3x"></span></a>
-	            <a href="https://github.com/tonycarballeira" target="_blank"><span class="fa fa-github fa-3x"></span></a>
-	            <a href="https://www.linkedin.com/in/tonycarballeira" target="_blank"><span class="fa fa-linkedin fa-3x"></span></a>
-	          </div>
-	        </div>
-	        <div class="info">
-	          <div class="name">Tony Carballeira</div>
-	          <b>Full Stack Dev</b> loves to build shelves from Wal-mart.
-	          <div class="contacts">
-	            <a href="https://enigmatic-meadow-2101.herokuapp.com/" target="_blank">Tony Carballeira</a>
-	            <br>
-	            <a href="https://www.linkedin.com/in/tonycarballeira" target="_blank">@tonycarballeira</a>
-	          </div>
-	        </div>
-	      </div>
-	    </div>
-	  </div>
-	</div>
-	<!--/.container-->
-</section>
-<div class="footer-12">
-	<div class="container">
-	    Made with <span class="fa fa-heart" style="color:red;"> </span> @ The Lab
-	</div>
-</div>
+<!--<section class="content-12">-->
+	<!--<%= link_to "Don't wait until it's to late // Get Started Now!", new_user_registration_path, class: "wide btn-wide" %>-->
+<!--</section>-->
+<!--<section class="crew-4">-->
+	<!--<div class="container">-->
+	  <!--<h3>The Crew<br/>-->
+	    <!--We built this thing in 24/hrs</h3>-->
+	  <!--<div class="members">-->
+	    <!--<div class="member-wrapper">-->
+	      <!--<div class="member">-->
+	        <!--<div class="photo-wrapper">-->
+	          <!--<div class="photo">-->
+	            <!--<img src="../../common-files/img/crew/vladimir-k.png" alt="">-->
+	          <!--</div>-->
+	          <!--<div class="overlay">-->
+	            <!--<a href="https://blockchain.info/address/1GN4ENR3qgXmwB82NprT6zuBfUShev3Aca" target="_blank"><span class="fa fa-btc fa-3x"></span></a>-->
+	            <!--<a href="https://github.com/gitney"><span class="fa fa-github fa-3x"></span></a>-->
+	            <!--<a href="https://twitter.com/NeyHernandez3"><span class="fa fa-twitter fa-3x"></span></a>-->
+	          <!--</div>-->
+	        <!--</div>-->
+	        <!--<div class="info">-->
+	          <!--<div class="name">Ney Hernandez</div>-->
+	          <!--<b>Front Developer</b> Front end designer and html5, CSS3, JS coder.-->
+	          <!--<div class="contacts">-->
+	            <!--<a href="https://github.com/gitney" target="_blank">https://github.com/gitney</a>-->
+	            <!--<br>-->
+	            <!--<a href="https://twitter.com/NeyHernandez3" target="_blank">@NeyHernandez3</a>-->
+	          <!--</div>-->
+	        <!--</div>-->
+	      <!--</div>-->
+	    <!--</div>-->
+	    <!--<div class="member-wrapper">-->
+	      <!--<div class="member">-->
+	        <!--<div class="photo-wrapper">-->
+	          <!--<div class="photo">-->
+	            <!--<img src="../../common-files/img/crew/sergey-s.png" alt="">-->
+	          <!--</div>-->
+	          <!--<div class="overlay">-->
+	            <!--<a href="https://blockchain.info/address/1PYQWY9KTu6xXBsYcpbrhWeKvtnQH3kWw5" target="_blank"><span class="fa fa-btc fa-3x"></span></a>-->
+	            <!--<a href="https://github.com/isaacito" target="_blank"><span class="fa fa-github fa-3x"></span></a>-->
+	            <!--<a href="https://twitter.com/i_wein" target="_blank"><span class="fa fa-twitter fa-3x"></span></a>-->
+	          <!--</div>-->
+	        <!--</div>-->
+	        <!--<div class="info">-->
+	          <!--<div class="name">Isaac Weinbach</div>-->
+	          <!--<b>The Heartbeat</b> doesn't care that guac is extra.-->
+	          <!--<div class="contacts">-->
+	            <!--<a href="http://www.isaacweinbach.co/" target="_blank">http://isaacweinbach.co/</a>-->
+	            <!--<br>-->
+	            <!--<a href="https://twitter.com/i_wein" target="_blank">@i_Wein</a>-->
+	          <!--</div>-->
+	        <!--</div>-->
+	      <!--</div>-->
+	    <!--</div>-->
+	    <!--<div class="member-wrapper">-->
+	      <!--<div class="member">-->
+	        <!--<div class="photo-wrapper">-->
+	          <!--<div class="photo">-->
+	            <!--<img src="../../common-files/img/crew/adrian-v.png" alt="">-->
+	          <!--</div>-->
+	          <!--<div class="overlay">-->
+	            <!--<a href="https://blockchain.info/address/1HksghkAu5HrAW8wJGFtonvtz3YRe7ruoU" target="_blank"><span class="fa fa-btc fa-3x"></span></a>-->
+	            <!--<a href="https://github.com/CyberStrike" target="_blank"><span class="fa fa-github fa-3x"></span></a>-->
+	            <!--<a href="https://twitter.com/cyberstrike" target="_blank"><span class="fa fa-twitter fa-3x"></span></a>-->
+	          <!--</div>-->
+	        <!--</div>-->
+	        <!--<div class="info">-->
+	          <!--<div class="name">Chris Scott</div>-->
+	          <!--<b>Product Designer</b>When it comes to pizza, eats the crust first.-->
+	          <!--<div class="contacts">-->
+	            <!--<a href="https://github.com/CyberStrike" target="_blank">https://github.com/CyberStrike</a>-->
+	            <!--<br>-->
+	            <!--<a href="https://twitter.com/cyberstrike" target="_blank">@cyberstrike</a>-->
+	          <!--</div>-->
+	        <!--</div>-->
+	      <!--</div>-->
+	    <!--</div>-->
+	  <!--</div>-->
+	  	  <!--<div class="members">-->
+	    <!--<div class="member-wrapper">-->
+	      <!--<div class="member">-->
+	        <!--<div class="photo-wrapper">-->
+	          <!--<div class="photo">-->
+	            <!--<img src="../../common-files/img/crew/vladimir-k.png" alt="">-->
+	          <!--</div>-->
+	          <!--<div class="overlay">-->
+	            <!--<a href="https://blockchain.info/address/1DAQUFD2Jypu7vEqiydBLiBhev8UZi7G69" target="_blank"><span class="fa fa-btc fa-3x"></span></a>-->
+	            <!--<a href="https://github.com/Ameji012" target="_blank"><span class="fa fa-github fa-3x"></span></a>-->
+	            <!--<a href="https://twitter.com/anuvis_m" target="_blank"><span class="fa fa-twitter fa-3x"></span></a>-->
+	          <!--</div>-->
+	        <!--</div>-->
+	        <!--<div class="info">-->
+	          <!--<div class="name">Anuvis Mejia</div>-->
+	          <!--<b>Full Stack Dev</b> cuts his own hair.<br>&nbsp;-->
+	          <!--<div class="contacts">-->
+	            <!--<a href="http://www.anuvism.com/" target="_blank">http://anuvism.com/</a>-->
+	            <!--<br>-->
+	            <!--<a href="https://twitter.com/anuvis_m" target="_blank">@anuvis_m</a>-->
+	          <!--</div>-->
+	        <!--</div>-->
+	      <!--</div>-->
+	    <!--</div>-->
+	    <!--<div class="member-wrapper">-->
+	      <!--<div class="member">-->
+	        <!--<div class="photo-wrapper">-->
+	          <!--<div class="photo">-->
+	            <!--<img src="../../common-files/img/crew/sergey-s.png" alt="">-->
+	          <!--</div>-->
+	          <!--<div class="overlay">-->
+	            <!--<a href="https://blockchain.info/address/18sf1jgrdXF9BzJtxtiwzyqjkkAsr5SSz1" target="_blank"><span class="fa fa-btc fa-3x"></span></a>-->
+	            <!--<a href="https://github.com/marknatera" target="_blank"><span class="fa fa-github fa-3x"></span></a>-->
+	            <!--<a href="https://twitter.com/marknatera" target="_blank"><span class="fa fa-twitter fa-3x"></span></a>-->
+	          <!--</div>-->
+	        <!--</div>-->
+	        <!--<div class="info">-->
+	          <!--<div class="name">Mark Natera</div>-->
+	          <!--<b>Agile Full Stack Dev</b> never late.<br>&nbsp;-->
+	          <!--<div class="contacts">-->
+	            <!--<a href="http://markn.co/" target="_blank">http://markn.co/</a>-->
+	            <!--<br>-->
+	            <!--<a href="https://twitter.com/marknatera" target="_blank">@marknatera</a>-->
+	          <!--</div>-->
+	        <!--</div>-->
+	      <!--</div>-->
+	    <!--</div>-->
+	    <!--<div class="member-wrapper">-->
+	      <!--<div class="member">-->
+	        <!--<div class="photo-wrapper">-->
+	          <!--<div class="photo">-->
+	            <!--<img src="../../common-files/img/crew/adrian-v.png" alt="">-->
+	          <!--</div>-->
+	          <!--<div class="overlay">-->
+	            <!--<a href="https://blockchain.info/address/1QAwuJdtDEGDyNBZhhWxbssLweaxQRRUqV" target="_blank"><span class="fa fa-btc fa-3x"></span></a>-->
+	            <!--<a href="https://github.com/tonycarballeira" target="_blank"><span class="fa fa-github fa-3x"></span></a>-->
+	            <!--<a href="https://www.linkedin.com/in/tonycarballeira" target="_blank"><span class="fa fa-linkedin fa-3x"></span></a>-->
+	          <!--</div>-->
+	        <!--</div>-->
+	        <!--<div class="info">-->
+	          <!--<div class="name">Tony Carballeira</div>-->
+	          <!--<b>Full Stack Dev</b> loves to build shelves from Wal-mart.-->
+	          <!--<div class="contacts">-->
+	            <!--<a href="https://enigmatic-meadow-2101.herokuapp.com/" target="_blank">Tony Carballeira</a>-->
+	            <!--<br>-->
+	            <!--<a href="https://www.linkedin.com/in/tonycarballeira" target="_blank">@tonycarballeira</a>-->
+	          <!--</div>-->
+	        <!--</div>-->
+	      <!--</div>-->
+	    <!--</div>-->
+	  <!--</div>-->
+	<!--</div>-->
+	<!--&lt;!&ndash;/.container&ndash;&gt;-->
+<!--</section>-->
+<!--<div class="footer-12">-->
+	<!--<div class="container">-->
+	    <!--Made with <span class="fa fa-heart" style="color:red;"> </span> @ The Lab-->
+	<!--</div>-->
+<!--</div>-->
