--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
-<div class = "contain">
+<div class="container">
 <div class="row">
-  <div class="col-sm-6">
+  <div class="col-lg-8 col-md-offset-4">
     <h1>Sign up</h1>
 
     <%= form_for(resource, :as => resource_name, 
@@ -51,7 +51,7 @@
         </div>
       </div>    
       <% end %>
-      
+      <br>
 
       <%= render "devise/shared/links" %>
 
