--- a/app/views/claims/new.html.erb
+++ b/app/views/claims/new.html.erb
@@ -1,11 +1,11 @@
-<div class = "contain">
-  <div class="row">
-    <div class="col-sm-6">
-<h1>New Claim</h1>
+<div class="container">
+	<div class="row">
+  		<div class="col-lg-8 col-md-offset-4">
+			<h1>New Claim</h1>
 
-<%= render 'form' %>
+			<%= render 'form' %>
 
-<%= link_to 'Back', claims_path %>
-    </div>
-  </div>
+			<%= link_to 'Back', claims_path %>
+    	</div>
+ 	</div>
 </div>
