wip generate keys

--- a/app/views/pages/get_keys.slim
+++ b/app/views/pages/get_keys.slim
@@ -1,9 +1,11 @@
 .container
   .row
-    .col-lg-6.col-lg-offset-3
-      h1 Generate Keys
-
-      = current_user.user1_key
-      = current_user.user2_key
-
-
+    h1 Generate Keys
+    .col-lg-6
+      .form-group
+        label 'Key 1'
+        input.form-control disabled=true value=current_user.user1_key
+    .col-lg-6
+      .form-group
+        label 'Key 2'
+        input.form-control disabled=true value=current_user.user2_key
