--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -5,11 +5,18 @@
 </form>
 <% else %>
 <li><%= link_to "My Wallet", wallets_path %></li>
-<li><%= link_to "Edit your account", edit_user_registration_path %></li>
-
+<li><%= link_to "Claims", new_claim_path %></li>
 <% if current_user.admin? %>
 <li><%= link_to "Admin", admin_root_path %></li>
 <% end %>
-
-<li><%= link_to "Sign out", destroy_user_session_path, data:{method: :delete} %></li>
+<li class="dropdown">
+  <a class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
+    Account
+    <span class="caret"></span>
+  </a>
+  <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu">
+	<li><%= link_to "Edit your account", edit_user_registration_path %></li>
+  	<li><%= link_to "Sign out", destroy_user_session_path, data:{method: :delete} %></li>
+  </ul>
+</li>
 <% end %>
