--- a/app/views/pages/get_keys.slim
+++ b/app/views/pages/get_keys.slim
@@ -5,7 +5,34 @@
       .form-group
         label 'Key 1'
         input.form-control disabled=true value=current_user.user1_key
+      .form-inline
+        .form-group
+          button.btn-md.btn.btn-default
+            i.fa.fa-envelope-o.fa-lg
+              |  Email
+        .form-group
+          button.btn-md.btn.btn-default
+            i.fa.fa-download.fa-lg
+              |  Download
+        .form-group
+          button.btn-md.btn.btn-default
+            i.fa.fa-copy.fa-lg
+              |  Copy
+  .row
     .col-lg-6
       .form-group
         label 'Key 2'
         input.form-control disabled=true value=current_user.user2_key
+      .form-inline
+        .form-group
+          button.btn-md.btn.btn-default
+            i.fa.fa-envelope-o.fa-lg
+              |  Email
+        .form-group
+          button.btn-md.btn.btn-default
+            i.fa.fa-download.fa-lg
+              |  Download
+        .form-group
+          button.btn-md.btn.btn-default
+            i.fa.fa-copy.fa-lg
+              |  Copy
